# campsite-tracker

./: .dockerignore  .gitignore  App.css  App.tsx  Dockerfile  README.md  justfile
backend/: .env  .env.1  Cargo.toml
backend/crates/auth_services/: Cargo.toml
backend/crates/auth_services/src/: jwt.rs  lib.rs  middleware.rs  service.rs  types.rs
backend/crates/campground-scan/: Cargo.toml
backend/crates/campground-scan/src/: email_service.rs  executor.rs  executor_helpers.rs  lib.rs  notification_service.rs  rec_gov_client.rs  scan_service.rs  scan_types.rs  session_manager.rs  sms_service.rs
backend/crates/notification_services/: Cargo.toml
backend/crates/notification_services/src/: lib.rs  service.rs  types.rs
backend/crates/postgres/: Cargo.toml
backend/crates/postgres/src/: lib.rs
backend/crates/rec_gov/: Cargo.toml
backend/crates/rec_gov/src/: facility_search.rs  lib.rs
backend/crates/web_handlers/: Cargo.toml
backend/crates/web_handlers/src/: admin_handlers.rs  admin_scan_handlers.rs  auth_handlers.rs  handlers.rs  lib.rs  profile_handlers.rs  scan_handlers.rs  scan_types.rs  verification_handlers.rs
backend/crates/web_server/: Cargo.toml
backend/crates/web_server/src/: main.rs  scan_manager.rs
backend/migrations/: 001_initial_schema.sql
backend/src/: lib.rs  main.rs
backend/src/api/: facility_search.rs  mod.rs
backend/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  service.rs  types.rs
backend/src/database/: database.rs
deploy/: build_and_deploy.sh  check_running.sh  logs.sh  restart_and_test_ssh.sh  run_migration.sh  setup_databse.sh  setup_infra.sh  start.sh  stop.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.test.tsx  App.tsx
frontend/src/components/Auth/: LoginModal.css  LoginModal.tsx  SignUpModal.css  SignUpModal.tsx
frontend/src/components/Auth/Login/: LoginModal.css  LoginModal.module.css  LoginModal.tsx
frontend/src/components/Auth/SignUp/: SignUpModal.css  SignUpModal.module.css  SignUpModal.tsx  SignUpUtils.tsx
frontend/src/components/CreateScan/: CreateScan.css  CreateScan.tsx  ScanUtils.tsx
frontend/src/components/DatePicker/: DatePicker.css  DatePicker.tsx
frontend/src/components/FacilitySearch/: FacilitySearch.css  FacilitySearch.tsx
frontend/src/components/Header/: Header.css  Header.tsx
frontend/src/components/MountainBackground/: MountainBackground.css  MountainBackground.tsx
frontend/src/components/UserProfile/: UserProfile.css  UserProfile.tsx  UserProfileUtils.tsx
frontend/src/components/UserScans/: UserScans.css  UserScans.tsx
py/: gmail_python_sms.txt  monitor_campgrounds.py  send_sms.py
