[package]
name = "campsite-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "campsite-tracker"
path = "src/main.rs"

[lib]
name = "campsite_tracker"
path = "src/lib.rs"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tokio = "1.45"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"

# Database dependencies
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
