[package]
name = "campsite-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "campsite-tracker"
path = "src/main.rs"

[lib]
name = "campsite_tracker"
path = "src/lib.rs"

[dependencies]
# Core dependencies
env_logger = "0.11.8"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.45"

# Web framework and utilities
actix-web = "4.4"
actix-files = "0.6"
reqwest = { version = "0.12.19", features = ["json"] }
urlencoding = "2.1"

# Database dependencies
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication and security dependencies
bcrypt = "0.17"
jsonwebtoken = "9.2"
regex = "1.10"
validator = { version = "0.20", features = ["derive"] }

# Error handling and middleware
anyhow = "1.0"
futures-util = "0.3"
thiserror = "2.0"

# Environment variables
dotenvy = "0.15"

[workspace]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
