[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
# Core dependencies
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.1"
tokio = { version = "1.45", features = ["full"] }

# Web framework and utilities
actix-web = "4.4"
actix-files = "0.6"
reqwest = { version = "0.12.19", features = ["json"] }
urlencoding = "2.1"

# Database dependencies
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }

# Authentication and security dependencies
bcrypt = "0.17"
jsonwebtoken = "9.2"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }


# Error handling and middleware
anyhow = "1.0"
futures-util = "0.3"
thiserror = "2.0"

# Environment variables
dotenvy = "0.15"

# Internal dependencies
auth_services = { path = "crates/auth_services" }
campground-scan = { path = "crates/campground-scan" }
notification_services = { path = "crates/notification_services" }
rec_gov = { path = "crates/rec_gov" }
postgres = { path = "crates/postgres" }
web_handlers = { path = "crates/web_handlers" }
web_server = { path = "crates/web_server" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
module_inception = "allow"
new_without_default = "allow"
