[package]
name = "campground-scan"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[lints]
workspace = true
