[package]
name = "web_handlers"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
auth_services = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
lazy_static = "1.4"
log = { workspace = true }
notification_services = { workspace = true }
regex = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = "1.0"
uuid = { workspace = true }
validator = { workspace = true }

[lints]
workspace = true
