[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
actix-files = { workspace = true }
auth_services = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
notification_services = { workspace = true }
postgres = { workspace = true }
rec_gov = { workspace = true }
serde_json = { workspace = true }
web_handlers = { workspace = true }

[lints]
workspace = true
